--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,7 @@
 kotlin.code.style=official
 groupId=se.ade.kuri
 version=0.0.1
+
+org.gradle.jvmargs=-Xmx4096m
+
+kotlin.mpp.androidSourceSetLayoutVersion=2
