Publications set version 0.0.2-SNAPSHOT

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,20 @@
 kotlin.code.style=official
 groupId=se.ade.kuri
-version=0.0.1
+version=0.0.2-SNAPSHOT
 
 org.gradle.jvmargs=-Xmx4096m
 
 kotlin.mpp.androidSourceSetLayoutVersion=2
+
+# Add to local.properties, to enable signing and deploy
+# ossrhUser=
+# ossrhPass=
+# signing.keyId=
+# signing.password=
+# signing.secretKeyRingFile=/Users/ME/.gnupg/secring.gpg
+
+# Command to export secring.gpg if using GPG 2.1 or newer:
+# gpg --keyring secring.gpg --export-secret-keys > ~/.gnupg/secring.gpg
+
+# For more info
+# https://dev.to/kotlin/how-to-build-and-publish-a-kotlin-multiplatform-library-going-public-4a8k
